methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: not found: value versLAvant
  if (versLAvant()==true)
      ^MethodsArgs:5: error: not found: value nbPas
    for (i<- 1 to nbPas)
                  ^